--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .Ruserdata
 data/original data/ANES 2008 2009.do
 data/original data/anes2008_2009panel_dataset.dta
+data/original-data/ANES 2008 2009.do
+data/original-data/anes2008_2009panel_dataset.dta
